chnage url + code refactor

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 
 <div id="root"></div>
 <script>
-    var baseUrl = "http://127.0.0.1:5000"
+    var baseUrl = "https://b4tov86un0.execute-api.us-east-2.amazonaws.com/dev"
+    window.localStorage.setItem('baseUrl', baseUrl);
 </script>    
